manifests/minio.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-statefulset
  namespace: workshop
spec:
  serviceName: minio-service
  replicas: 1
  selector:
    matchLabels:
      app: minio-pod
  template:
    metadata:
      labels:
        app: minio-pod
    spec:
      containers:
      - name: minio-container
        image: quay.io/minio/minio:RELEASE.2024-07-04T14-25-45Z
        command:
        - /bin/bash
        - -c
        args:
        - minio server /data --console-address :9090
        volumeMounts:
        - mountPath: /data
          name: minio-local-volume
        ports:
        - containerPort: 9000
          name: api
        - containerPort: 9090
          name: console
      nodeSelector:
        kubernetes.io/hostname: k3s-workshop-5
  volumeClaimTemplates:
  - metadata:
      name: minio-local-volume
    spec:
      storageClassName: ""
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
