manifests/predictor.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictor-deployment
  namespace: workshop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: predictor-pod
  template:
    metadata:
      labels:
        app: predictor-pod
    spec:
      containers:
      - name: predictor-container
        image: besartshyti/workshop-predictor:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5015
