manifests/static.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: workshop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-pod
  template:
    metadata:
      labels:
        app: static-pod
    spec:
      containers:
      - name: static-container
        image: besartshyti/workshop-static:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3012
