manifests/api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: workshop
spec:
  type: ClusterIP
  selector:
    app: api-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3011
