manifests/minio.service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: workshop
  labels:
    app: minio-pod
spec:
  clusterIP: None
  selector:
    app: minio-pod
  ports:
    - port: 9000
      name: api
    - port: 9090
      name: admin
