manifests/pg.service.yml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: workshop
  labels:
    app: pg-pod
spec:
  clusterIP: None
  selector:
    app: pg-pod
  ports:
    - port: 5432
      name: postgres
