manifests/static.service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-service
  namespace: workshop
spec:
  type: ClusterIP
  selector:
    app: static-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3012
